Move code to step 2

--- a/recaps/recap_olist_01.ipynb
+++ b/recaps/recap_olist_01.ipynb
@@ -453,7 +453,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Start from order_payments\n",
+    "# 2. Group by order_id THEN sum the rows (keep only the payment_value)\n",
+    "# 3. Merge with orders on order_id\n",
+    "# 4. Filter the delivered orders (keep only order_approved_at)\n",
+    "\n",
+    "# 5.a Convert order_approved_at to a datetime using pd.to_datetime X\n",
+    "# 5.b Set order_approved_at as the index (set_index)\n",
+    "# 5.c Resample by week using the 'W' rule THEN sum the rows\n",
+    "# 6. Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "❓ **Step 2**: code your logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# payments.resample?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +495,7 @@
        "<AxesSubplot:title={'center':'Olist Weekly Sales in BRL'}, xlabel='order_approved_at'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -480,38 +513,12 @@
     }
    ],
    "source": [
-    "# 1. Start from order_payments\n",
-    "# 2. Group by order_id THEN sum the rows (keep only the payment_value)\n",
-    "# 3. Merge with orders on order_id\n",
-    "# 4. Filter the delivered orders (keep only order_approved_at)\n",
-    "\n",
-    "# 5.a Convert order_approved_at to a datetime using pd.to_datetime X\n",
-    "# 5.b Set order_approved_at as the index (set_index)\n",
-    "# 5.c Resample by week using the 'W' rule THEN sum the rows\n",
-    "# 6. Plot\n",
-    "\n",
     "payments.groupby('order_id').sum().merge(orders, on='order_id') \\\n",
     "        .query(\"order_status == 'delivered'\")[['payment_value', 'order_approved_at']] \\\n",
     "        .resample('W', on='order_approved_at').sum() \\\n",
     "        .plot(title=\"Olist Weekly Sales in BRL\")\n",
     "\n",
     "# We would need to set_index('order_approved_at') if we don't use on='order_approved_at'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# payments.resample?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "❓ **Step 2**: code your logic"
    ]
   },
   {
